# AF-Serializer

./: .gitignore  =2.10.0  README.md  examples_construct_impl.py  examples_decorators.py  examples_phase2_phase3.py  pyproject.toml  requirements.txt  test.py  validate_implementation.py
af_serializer/: README.md  __init__.py  basic_types.py  decorators.py
docs/: LBTypeDescriptor.txt  LVObjects.txt
docs/HTML/: LabVIEW-Manager-Data-Types-NI.html  Type-Descriptors-NI.html
src/: Serializer.py  __init__.py  api.py  auto_flatten.py  basic_types.py  compound_types.py  decorators.py  descriptors.py  lv_serializer.py  objects.py  serialization.py
src/construct_impl/: README.md  __init__.py  api.py  basic_types.py  compound_types.py  decorators.py  objects.py
src/examples/labview-variant-data-main/: __init__.py
src/examples/labview-variant-data-main/labview_data/: type_converters.py  types.py
src/examples/labview-variant-data-main/tests/: test_labview_variant.py
src/examples/pylabview-master/: setup.py
src/examples/pylabview-master/pylabview/playground/: datatype.py
src/test/: read.py  read2.py  test.py
src/types/: __init__.py  basic.py  compound.py  objects.py  variant.py
tests/: conftest.py  test_auto_flatten.py  test_basic_types.py  test_compound_types.py  test_decorators.py  test_hex_validation.py  test_module_structure.py  test_objects.py
tests/construct_impl/: __init__.py  conftest.py  test_basic_types.py  test_compound_types.py  test_decorators.py  test_objects.py
