[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "af-serializer"
version = "0.3.0"
description = "LabVIEW data serialization library for Python. Serialize Python data structures to LabVIEW-compatible binary format."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Faragoz"}
]
keywords = [
    "labview",
    "serialization",
    "binary",
    "actor-framework",
    "deserialization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"
]
dependencies = [
    "construct>=2.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/Faragoz/AF-Serializer"
Repository = "https://github.com/Faragoz/AF-Serializer"
Issues = "https://github.com/Faragoz/AF-Serializer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["af_serializer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
